# kantoforge-hq

./: .env.example  .gitignore  PIPELINE.md  README.md  netlify.toml  package.json  vercel.json
.github/workflows/: deploy.yml
api/: oddbrew-auth.js  oddbrew-inventory.js  public-competitions.js  raffle-image.js  raffle-og.js  sync-oddbrew.js  sync-shopify.js
backend/: pyproject.toml
backend/repurposer/: captions.py  cli.py  ingest.py  pipeline.py  render.py  score.py  server.py  transcribe.py
blender/: .env.example  README.md  inspect_blend.py  kf_render_agent.py  render_job.py  start-agent.bat  start-agent.command
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css
public/: index.html  manifest.json
src/: App.css  App.js  ReviewDashboard.js  index.css  index.js
src/components/: AgarLab.js  AnalyticsPage.js  BlenderRenderPanel.js  CommissionsPage.js  CostsPage.js  Dashboard.js  FruitingRoom.js  FulfilmentInvoices.js  GrainRoom.js  Library.js  Login.js  MonthlyPage.js  OddBrewAds.js  OddBrewAnalysis.js  OddBrewDaily.js  OddBrewInvoices.js  OddBrewLogo.js  OddBrewMargins.js  OddBrewPage.js  OrdersPage.js  PricingPage.js  PrintShopPage.js  ProductStudio.js  RafflesPage.js  SettingsPage.js  Shop.js  StrainCard.js  TasksPage.js  TeamPage.js  TraitBars.js  badges.js  charts.js
src/game/: GameContext.js  engine.js  engine.test.js  genetics.js
src/lambda/: generate-content.js  publish.js  queue.js  review.js
src/lib/: access.js  auth.js  calc.js  comp.js  composite.js  csv.js  fees.js  format.js  image.js  (+9 more)
supabase/: schema.sql
(+20 files in other folders)
